# aimdl_dashboard

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  RUNNING.md  claude_code_prompt.md  claude_code_prompt_fix_helix_images.md  claude_code_prompt_maxima_pairs.md  claude_code_prompt_movie_mode.md  claude_code_prompt_phase2.md  claude_code_prompt_zoom.md  docker-compose.yml
.circleci/: README.md  config.yml
.claude/: 12_configurable_data_scale.md  13_aimdl_api_discovery.md  15a_backend_discovery.md  15b_backend_api.md  15c_frontend.md  15d_documentation.md  17a_sample_batch_view.md  debug.py
.github/workflows/: release.yml
backend/: README.md  pyproject.toml  run.sh  run_tests.sh
backend/src/aimdl_dashboard_api/: app.py  cli.py  config.py  discovery.py  file_cache.py  girder_client.py  models.py
backend/tests/: conftest.py  test_app.py  test_discovery.py  test_girder_client.py
backend/tests/fixtures/: mock_counts.json  mock_datafiles_helix.json  mock_datafiles_maxima.json  mock_item_files.json
frontend/: eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: config.js  utils.js
frontend/src/components/: Dashboard.jsx  DataControls.jsx  Header.jsx  InstrumentTab.jsx  MockVisualization.jsx  MovieView.jsx  SampleComparisonView.jsx  SpotlightView.jsx  StatusBar.jsx  StreamView.jsx  ThroughputHero.jsx  ViewModeSelector.jsx  VizCard.jsx  VizDetailModal.jsx  ZoomControl.jsx
frontend/src/components/__tests__/: DataControls.test.jsx  InstrumentTab.test.jsx  SampleComparisonView.test.jsx  StreamView.test.jsx  ThroughputHero.test.jsx  VizDetailModal.test.jsx
frontend/src/hooks/: useVizStream.js
frontend/src/hooks/__tests__/: useVizStream.test.js
frontend/src/styles/: globals.css
frontend/src/test/: setup.js  utils.test.js
issues/: 01-helix-image-proxy-bug.md  02-maxima-scan-xrd-pairs.md  03-zoom-dynamic-scaling.md  04-sample-movie-mode.md
